--- a/site/index.html
+++ b/site/index.html
@@ -6,6 +6,6 @@
     <title>Hello world</title>
 </head>
 <body>
-   Hello coursera!!!
+   Hello coursera!!!,it a great tutor
 </body>
-</html>cd
+</html>
