try to learn what have been thought

--- a/site/index.html
+++ b/site/index.html
@@ -6,6 +6,6 @@
     <title>Hello world</title>
 </head>
 <body>
-   Hello coursera!!!,it a great tutor
+   hello friend ,am new beginner on the course
 </body>
 </html>
