--- a/site/index.html
+++ b/site/index.html
@@ -6,6 +6,6 @@
     <title>Hello world</title>
 </head>
 <body>
-   hello friend ,am new beginner on the course
+   hello world,am beginner,i want to learn fornt develop and javascript
 </body>
 </html>
