--- a/site/index.html
+++ b/site/index.html
@@ -6,6 +6,6 @@
     <title>Hello world</title>
 </head>
 <body>
-   hello world,am beginner,i want to learn fornt develop and javascript
+   coursera tutors! it's a great environment for learning front-line development 
 </body>
 </html>
